--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "ostree-container"
+name = "ostree-container-tool"
 version = "0.1.0"
 authors = ["Colin Walters <walters@verbum.org>"]
 edition = "2018"
@@ -8,22 +8,7 @@ repository = "https://github.com/cgwalters/ostree-container"
 readme = "README.md"
 
 [dependencies]
-cjson = "0.1.1"
-flate2 = "1.0.20"
-gio = "0.9.1"
-glib = "0.10.3"
-hex = "0.4.3"
-openat = "0.1.20"
-openat-ext = "0.1.13"
-openssl = "0.10.33"
-ostree = { version = "0.9.1", features = ["v2020_4"] }
-ostree-sys = "0.7.1"
-phf = { version = "0.8.0", features = ["macros"] }
-serde = "1.0.125"
-serde_json = "1.0.64"
-tar = "0.4.33"
-
-[dev-dependencies]
 anyhow = "1.0"
-tempfile = "3.2.0"
-
+ostree-container = { path = "lib" }
+clap = "2.33.3"
+structopt = "0.3.21"
