--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -24,6 +24,7 @@ serde_json = "1.0.64"
 tar = "0.4.33"
 anyhow = "1.0"
 fn-error-context = "0.1.1"
+nix = "0.20.0"
 
 [dev-dependencies]
 tempfile = "3.2.0"
