--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -25,6 +25,7 @@ tar = "0.4.33"
 anyhow = "1.0"
 fn-error-context = "0.1.1"
 nix = "0.20.0"
+camino = "1.0.4"
 
 [dev-dependencies]
 tempfile = "3.2.0"
