--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -17,7 +17,7 @@ openat = "0.1.20"
 openat-ext = "0.1.13"
 openssl = "0.10.33"
 ostree = { version = "0.9.1", features = ["v2020_4"] }
-ostree-sys = "0.7.1"
+ostree-sys = "0.7.2"
 phf = { version = "0.8.0", features = ["macros"] }
 serde = "1.0.125"
 serde_json = "1.0.64"
@@ -26,6 +26,8 @@ anyhow = "1.0"
 fn-error-context = "0.1.1"
 nix = "0.20.0"
 camino = "1.0.4"
+glib-sys = "0.10.1"
+gvariant = "0.4.0"
 
 [dev-dependencies]
 tempfile = "3.2.0"
