--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -28,6 +28,7 @@ nix = "0.20.0"
 camino = "1.0.4"
 glib-sys = "0.10.1"
 gvariant = "0.4.0"
+libc = "0.2.92"
 
 [dev-dependencies]
 tempfile = "3.2.0"
