Add an test example

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -12,3 +12,6 @@ anyhow = "1.0"
 ostree-container = { path = "../lib" }
 clap = "2.33.3"
 structopt = "0.3.21"
+ostree = { version = "0.9.1", features = ["v2020_4"] }
+libc = "0.2.92"
+gio = "0.9.1"
