--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -16,8 +16,8 @@ hex = "0.4.3"
 openat = "0.1.20"
 openat-ext = "0.1.13"
 openssl = "0.10.33"
-ostree = { version = "0.9.1", features = ["v2020_4"] }
-ostree-sys = "0.7.2"
+ostree = { version = "0.10.0", features = ["v2021_1"] }
+ostree-sys = "^0.7.2"
 phf = { version = "0.8.0", features = ["macros"] }
 serde = "1.0.125"
 serde_json = "1.0.64"
