--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -25,16 +25,15 @@ oci-distribution = "0.6.0"
 openat = "0.1.20"
 openat-ext = "0.1.13"
 openssl = "0.10.33"
-ostree = { version = "0.10.0", features = ["v2021_1"] }
+os_pipe = "*"
 ostree-sys = "0.7.2"
-phf = { version = "0.8.0", features = ["macros"] }
 serde = "1.0.125"
 serde_json = "1.0.64"
 tar = "0.4.33"
 
 [dependencies.ostree]
-features = ["v2020_4"]
-version = "0.9.1"
+features = ["v2021_1"]
+version = "0.10.0"
 
 [dependencies.phf]
 features = ["macros"]
