--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,5 @@ lto = "thin"
 
 [patch.crates-io]
 oci-distribution = { git = 'https://github.com/cgwalters/krustlet', branch = 'streaming-client' }
-ostree = { path = '../../../gitlab/fkrull/ostree-rs' }
-ostree-sys = { path = '../../../gitlab/fkrull/ostree-rs/sys' }
+ostree = { git = 'https://gitlab.com/fkrull/ostree-rs', rev = 'fd2b57864938e9b3c0fc0c4496da29a099ad4616' }
+ostree-sys = { git = 'https://gitlab.com/fkrull/ostree-rs', rev = 'fd2b57864938e9b3c0fc0c4496da29a099ad4616' }
